# mydotfiles

./: .ansible-lint  .bash_logout  .bash_profile  .bashrc  .envrc  .gitconfig  .gitignore  .gitmodules  .install.sh  .rubocop.yml  Gemfile  LICENSE  MIT-LICENSE  Makefile  Pipfile  README.md  README.rdoc  README.textile  Rakefile  ansible.cfg  bash_profile  bashrc  config.yml  dotfiles.cfg  install.sh  mydotfiles.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  site.yml
.github/workflows/: ansible-check.yml  ansible-lint.yml  github-actions-shellcheck.yml  shellcheck.yml
.vim/: .gvimrc  .vimrc
backups/: com.googlecode.iterm2.plist
backups/homebrew/: Brewfile
bash/: aliases  bash.config  bash_profile  bashrc
bash/alias.d/: commands.alias  rails.alias
bash/command.d/: bashmarks.command  deploy.command  find.command  ldap.command  synergys.command  textmate.command  vim.command  wikipedia.command
bash/profile.d/: brew.profile  (+5 more)
brew/: Brewfile
config/: mydotfiles.yaml
git/: .gitconfig  .gitignore_global  gitconfig
go/: .gorc
mks/: brew.mk  dotfiles.mk  homebrew.mk  ssh.mk  vim.mk  zim.mk
mongodb/: .mongorc.js
rakelib/: brew.rake  common.rake  dotfiles.rake  ohmyzsh.rake  ohmyzshtasks.rake  ssh.rake  vim.rake  zim.rake
ruby/: .gemrc  .irbrc  gemrc  irbrc
rvm/: rvmrc
shell/: .aliasesrc  .functionsrc  .ldaprc  .p10k.zsh  .p10krc  .togglesrc  .zfunctionsrc  .zlogin  .zprofile  .zshenv  .zshrc  aliases  bash.config  bash_profile  bashrc  shell.config  shell.sh  zshrc
ssh/: config
synergy/: synergy.conf
vim/: .vimrc  gvimrc  vimrc
(+196 files in other folders)
