[project]
name = "mydotfiles"
version = "4.16.0"
authors = [
  { name = "Javier Juarez", email = "jj@chainedto.cloud" },
]
keywords = [
  "configuration",
  "dotfiles",
  "tools",
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "ansible-core==2.17.2",
]

[dependency-groups]
dev = [
  "ansible-lint>=25.6.1",
  "pytest>=8.4.1",
]
